--- a/home.css
+++ b/home.css
@@ -13,14 +13,12 @@ body {
 }
 
 #homepage-container {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   height: 90%;
   width: 90%;
   border-radius: 20px;
   flex-direction: column;
   background-color: white;
+  padding: 20px;
 }
 
 .all-topic {
@@ -32,7 +30,7 @@ body {
 }
 .quiz-topic {
   background-color: rgb(239, 242, 245);
-  margin: 15px 40px;
+  margin: 12px 40px;
   padding: 10px;
   width: 300px;
   height: 200px;
