--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: sans-serif;
+  height: 100vh;
+  background-color: #8a98f1;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #f4f4f4;
-  margin: 0;
-}
-
-#homepage-container {
-  text-align: center;
 }
 
 .quiz-topic {
@@ -21,22 +21,22 @@ button {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
-  background-color: #007bff;
+  background-color: #8a98f1;
   color: white;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #8a98f1;
 }
 
 #quiz-container {
-  background: white;
+  height: 90%;
+  width: 90%;
+  border-radius: 20px;
+  background-color: white;
   padding: 20px;
-  border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
-  text-align: center;
 }
 
 .quiz-step {
