--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,18 @@ body {
   margin: 20px;
 }
 
+#quizz {
+  height: 90%;
+  width: 90%;
+  border-radius: 20px;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 button {
   margin-top: 10px;
+  margin-right: 20px;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -26,17 +36,8 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  background-color: #8a98f1;
-}
-
 #quiz-container {
-  height: 90%;
-  width: 90%;
-  border-radius: 20px;
-  background-color: white;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .quiz-step {
