--- a/quiz.css
+++ b/quiz.css
@@ -36,16 +36,38 @@ button {
   cursor: pointer;
   border: none;
   border-radius: 20px;
+  display: inline;
 }
 
 #quiz-container {
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .quiz-step {
   display: none;
 }
 
+.quiz-step h2 {
+  color: #8a98f1;
+}
+
+.quiz-step p {
+  font-weight: 600;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
 .quiz-step.active {
   display: block;
+}
+
+.quiz-step label {
+  display: block;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
