--- a/quiz.css
+++ b/quiz.css
@@ -17,7 +17,7 @@ body {
 }
 
 #quizz {
-  height: 90%;
+  min-height: 90%;
   width: 90%;
   border-radius: 20px;
   background-color: white;
@@ -37,11 +37,15 @@ button {
   border: none;
   border-radius: 20px;
   display: inline;
+  transition: 0.4s;
+}
+
+button:hover {
+  background-color: #5f68a3;
 }
 
 #quiz-container {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -49,25 +53,33 @@ button {
   display: none;
 }
 
-.quiz-step h2 {
+.quiz-step h3 {
   color: #8a98f1;
 }
 
 .quiz-step p {
   font-weight: 600;
-  margin-top: 3%;
-  margin-bottom: 3%;
+  font-size: 20px;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .quiz-step.active {
   display: block;
 }
 
+.quiz-step input[type="radio"],
+.quiz-step input[type="checkbox"] {
+  margin-right: 10px;
+}
+
 .quiz-step label {
-  display: block;
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #aaa;
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 10px 60px 10px 10px;
+  width: 200px;
   border-radius: 5px;
+  border: 1px solid #aaa;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
