--- a/quiz.css
+++ b/quiz.css
@@ -23,6 +23,8 @@ body {
   background-color: white;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 button {
@@ -47,6 +49,7 @@ button:hover {
 #quiz-container {
   display: flex;
   align-items: center;
+  padding: 20px;
 }
 
 .quiz-step {
@@ -60,7 +63,7 @@ button:hover {
 .quiz-step p {
   font-weight: 600;
   font-size: 20px;
-  margin-top: 5%;
+  margin-top: 2%;
   margin-bottom: 5%;
 }
 
@@ -77,9 +80,14 @@ button:hover {
   display: inline-block;
   margin-bottom: 20px;
   padding: 10px 60px 10px 10px;
-  width: 200px;
+  min-width: 400px;
   border-radius: 5px;
   border: 1px solid #aaa;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+#timer {
+  font-weight: 600;
+  font-size: 18px;
 }
