--- a/home.css
+++ b/home.css
@@ -18,7 +18,7 @@ body {
   border-radius: 20px;
   flex-direction: column;
   background-color: white;
-  padding: 20px;
+  padding: 15px;
 }
 
 .all-topic {
@@ -89,4 +89,9 @@ button:hover {
 
 .fa-database {
   color: forestgreen;
+}
+
+#logout-button {
+  padding: 8px 20px;
+  margin-left: 10px;
 }
