--- a/quiz.css
+++ b/quiz.css
@@ -111,17 +111,17 @@ button:hover {
 }
 
 #logout-button {
-  margin-left: 20px;
-}
-
-#user-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-}
-
-#logout-button {
   margin: 0 !important;
   margin-left: 10px !important;
+}
+
+#design {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+#result {
+  width: 100%;
 }
